// Copyright 2024 Charlie Cohen <linzellart@gmail.com>
//
// Licensed under the GNU General Public License, Version 3.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     https://www.gnu.org/licenses/gpl-3.0.html
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

// List of available options:
// https://github.com/yoheimuta/protolint/blob/master/_example/config/.protolint.yaml

syntax = "proto3";

package client.v1;

import "google/api/field_behavior.proto";

// Notifications
//
// Notifications represents the user's notification settings.
message Notifications {
    // email: Whether the user wants to receive email notifications.
    bool email = 1 [(google.api.field_behavior) = INPUT_ONLY];
    // push: Whether the user wants to receive push notifications.
    bool push = 2 [(google.api.field_behavior) = INPUT_ONLY];
    // sms: Whether the user wants to receive SMS notifications.
    bool sms = 3 [(google.api.field_behavior) = INPUT_ONLY];
}

// UpdateNotificationsRequest
//
// UpdateNotificationsRequest is the request message for updating the user's notification settings.
//
// Fields:
//
// - field: The field to update.
// - value: The value to set.
message UpdateNotificationsRequest {
    // field: The field to update.
    string field = 1 [(google.api.field_behavior) = REQUIRED];
    // value: The value to set.
    bool value = 2;
}
