// Copyright 2024 Charlie Cohen <linzellart@gmail.com>
//
// Licensed under the GNU General Public License, Version 3.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     https://www.gnu.org/licenses/gpl-3.0.html
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

// List of available options:
// https://github.com/yoheimuta/protolint/blob/master/_example/config/.protolint.yaml

syntax = "proto3";

package client.v1;

import "google/api/field_behavior.proto";

// Privacy
//
// Privacy represents the user's privacy settings.
message Privacy {
    // data_collection: Whether the user wants to allow data collection.
    bool data_collection = 1 [(google.api.field_behavior) = INPUT_ONLY];
    // location: Whether the user wants to share their location.
    bool location = 2 [(google.api.field_behavior) = INPUT_ONLY];
}

// UpdatePrivacyRequest
//
// UpdatePrivacyRequest represents a request to update the user's privacy settings.
//
// Fields:
//
// - field: The field to update.
// - value: The value to set.
message UpdatePrivacyRequest {
    // field: The field to update.
    string field = 1 [(google.api.field_behavior) = REQUIRED];
    // value: The value to set.
    bool value = 2;
}
